sumo/tests/duarouter/alternatives/style1_input/errors/routealt/routealt_last_false/errors.duarouter
Error: Attribute 'last' in definition of routeDistribution '1' is not an int.
Quitting (on error).
